refactor(mango): 重构 infra 模块，删除 10 个空实现，保留 9 个有价值模块
主要变更:
- 删除空实现模块: mango-infra-all, mango-infra-idgen, mango-infra-mq,
  mango-infra-search, mango-infra-storage, mango-infra-job,
  mango-infra-security, mango-infra-log, mango-infra-lock, mango-infra-config
- 保留有价值模块: mango-infra-web, mango-infra-db, mango-infra-redis,
  mango-infra-feign, mango-infra-observability, mango-infra-doc,
  mango-infra-sse, mango-infra-websocket, mango-infra-kv
- 更新 mango/pom.xml dependencyManagement
- 新增 mango-infra 模块 CLAUDE.md 规范文档